# gcloud-etl-pipeline

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  to_sql.Dockerfile
.github/workflows/: build-and-deploy.yml  build.yml  ci-build.yml  ci-infra.yml  format.yml  infra.yml  lint.yml
infra/bootstrap/: backend.tf  main.tf  outputs.tf  variables.tf
infra/pipeline/: backend.tf  main.tf  variables.tf
infra/pipeline/modules/artifact/: artifact_registry.tf  variables.tf
infra/pipeline/modules/compute/: cloud_run_job.tf  cloud_run_service.tf  variables.tf
infra/pipeline/modules/database/: cloud_sql.tf  variables.tf
infra/pipeline/modules/iam/: authentication.tf  authorization.tf  variables.tf
infra/pipeline/modules/project/: project_services.tf
infra/pipeline/modules/storage/: bucket.tf  variables.tf
src/gcp_pipeline/extract/: read_from_bucket.py
src/gcp_pipeline/generate/: data_generator.py
src/gcp_pipeline/ingest/: upload_to_bucket.py  upload_to_database.py
