[project]
name = "gcp-pipeline"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "commitizen>=4.13.9",
    "google-cloud-storage>=3.9.0",
    "pytest>=9.0.2",
]

[project.scripts]
gcp-pipeline = "gcp_pipeline:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
